src/opt/tests/snapshots/unroll__bail_fn_scope.snap
---
created: "2019-04-29T02:16:31.362216700Z"
creator: insta@0.7.4
source: src/opt/tests/unroll.rs
expression: "\n    let something = {};\n    g = function() {\n        for (var x in something) {\n            log(x);\n        }\n    };\n"
---
something = {  }
_val = <function>:
    _ini = <void>
    x <= _ini
    <foreach in> something:
        _for = <argument 0>
        x <- _for
        _fun = <global log>
        _arg = *x
        <dead> = _fun(_arg)
<global g> <- _val
