src/opt/tests/snapshots/unroll__bail_on_second_usage.snap
---
created: "2019-04-29T02:39:01.850782800Z"
creator: insta@0.7.4
source: src/opt/tests/unroll.rs
expression: "\n    let something = {};\n    for (let x in something) {\n        g = x;\n    }\n    something.x = 1;\n    for (let x in something) {\n        g = x;\n    }\n"
---
something = {  }
_prp = "x"
_val = 1
something[_prp] <- _val
<foreach in> something:
    _val$1 = <argument 0>
    <global g> <- _val$1
